--- a/index.html
+++ b/index.html
@@ -117,20 +117,20 @@
 
             <div class="tile buttons is-ancestor mt-2">
 
-                <button class="tile is-parent m-6 is-hidden recipe-tile">
+                <button class="tile is-parent m-6 is-hidden recipe-tile" id="tile0">
                     <article class="tile is-child box">
                         <p class="title recipe-name"></p>
                         <figure class="image is-4by3 recipe-image">
-                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                            <img src="https://bulma.io/images/placeholders/640x480.png" id="img0">
                         </figure>
                     </article>
                 </button>
 
-                <button class="tile is-parent m-6 is-hidden recipe-tile">
+                <button class="tile is-parent m-6 is-hidden recipe-tile" id="tile1">
                     <article class="tile is-child box">
                         <p class="title recipe-name"></p>
                         <figure class="image is-4by3 recipe-image">
-                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                            <img src="https://bulma.io/images/placeholders/640x480.png" id="img1">
                         </figure>
                     </article>
                 </button>
@@ -141,20 +141,20 @@
 
             <div class="tile is-ancestor">
 
-                <button class="tile is-parent m-6 is-hidden recipe-tile">
+                <button class="tile is-parent m-6 is-hidden recipe-tile" id="tile2">
                     <article class="tile is-child box">
                         <p class="title recipe-name"></p>
                         <figure class="image is-4by3 recipe-image">
-                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                            <img src="https://bulma.io/images/placeholders/640x480.png" id="img2">
                         </figure>
                     </article>
                 </button>
 
-                <button class="tile is-parent m-6 is-hidden recipe-tile">
+                <button class="tile is-parent m-6 is-hidden recipe-tile" id="tile3">
                     <article class="tile is-child box">
                         <p class="title recipe-name"></p>
                         <figure class="image is-4by3 recipe-image">
-                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                            <img src="https://bulma.io/images/placeholders/640x480.png" id="img3">
                         </figure>
                     </article>
                 </button>
@@ -165,20 +165,20 @@
 
             <div class="tile is-ancestor">
 
-                <button class="tile is-parent m-6 is-hidden recipe-tile">
+                <button class="tile is-parent m-6 is-hidden recipe-tile" id="tile4">
                     <article class="tile is-child box">
                         <p class="title recipe-name"></p>
                         <figure class="image is-4by3 recipe-image">
-                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                            <img src="https://bulma.io/images/placeholders/640x480.png" id="img4">
                         </figure>
                     </article>
                 </button>
 
-                <button class="tile is-parent m-6 is-hidden recipe-tile">
+                <button class="tile is-parent m-6 is-hidden recipe-tile" id="tile5">
                     <article class="tile is-child box">
                         <p class="title recipe-name"></p>
                         <figure class="image is-4by3 recipe-image">
-                            <img src="https://bulma.io/images/placeholders/640x480.png">
+                            <img src="https://bulma.io/images/placeholders/640x480.png" id="img5">
                         </figure>
                     </article>
                 </button>
