fixed button element and moved id

--- a/index.html
+++ b/index.html
@@ -115,25 +115,25 @@
 
             <!-- Row 1 -->
 
-            <div class="tile buttons is-ancestor mt-2">
+            <div class="tile buttons is-ancestor mt-2" id="tile-parent">
 
-                <button class="tile is-parent m-6 is-hidden recipe-tile" id="tile0">
+                <div class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
-                        <p class="title recipe-name"></p>
+                        <p class="title recipe-name" id="tile0"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img0">
                         </figure>
                     </article>
-                </button>
+                </div>
 
-                <button class="tile is-parent m-6 is-hidden recipe-tile" id="tile1">
+                <div class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
-                        <p class="title recipe-name"></p>
+                        <p class="title recipe-name" id="tile1"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img1">
                         </figure>
                     </article>
-                </button>
+                </div>
 
             </div>
 
@@ -141,23 +141,23 @@
 
             <div class="tile is-ancestor">
 
-                <button class="tile is-parent m-6 is-hidden recipe-tile" id="tile2">
+                <div class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
-                        <p class="title recipe-name"></p>
+                        <p class="title recipe-name" id="tile2"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img2">
                         </figure>
                     </article>
-                </button>
+                </div>
 
-                <button class="tile is-parent m-6 is-hidden recipe-tile" id="tile3">
+                <div class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
-                        <p class="title recipe-name"></p>
+                        <p class="title recipe-name" id="tile3"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img3">
                         </figure>
                     </article>
-                </button>
+                </div>
 
             </div>
 
@@ -165,23 +165,23 @@
 
             <div class="tile is-ancestor">
 
-                <button class="tile is-parent m-6 is-hidden recipe-tile" id="tile4">
+                <div class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
-                        <p class="title recipe-name"></p>
+                        <p class="title recipe-name" id="tile4"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img4">
                         </figure>
                     </article>
-                </button>
+                </div>
 
-                <button class="tile is-parent m-6 is-hidden recipe-tile" id="tile5">
+                <div class="tile is-parent m-6 is-hidden recipe-tile">
                     <article class="tile is-child box">
-                        <p class="title recipe-name"></p>
+                        <p class="title recipe-name" id="tile5"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img5">
                         </figure>
                     </article>
-                </button>
+                </div>
 
             </div>
 
