added local storage

--- a/index.html
+++ b/index.html
@@ -103,10 +103,22 @@
                         </div>
 
                     </article>
+
                 </div>
 
                 <!-- End of search box -->
             </div>
+
+            <div class="tile is-ancestor">
+                <div class="tile is-parent">
+                    <article class="tile is-child box">
+                        <ul id="ingr-save">
+
+                        </ul>
+                    </article>
+                </div>
+            </div>
+
         </div>
 
         <div class="column is-three-quarters mr-2">
