--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
 
             <!-- Row 1 -->
 
-            <div class="tile buttons is-ancestor mt-2" id="tile-parent">
+            <div class="tile buttons is-ancestor mt-2">
 
-                <div class="tile is-parent m-6 is-hidden recipe-tile">
-                    <article class="tile is-child box">
+                <div class="tile is-parent m-6 is-hidden recipe-tile recipebtn">
+                    <article class="tile is-child box test" id="result0">
                         <p class="title recipe-name" id="tile0"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img0">
@@ -138,8 +138,8 @@
                     </article>
                 </div>
 
-                <div class="tile is-parent m-6 is-hidden recipe-tile">
-                    <article class="tile is-child box">
+                <div class="tile is-parent m-6 is-hidden recipe-tile recipebtn">
+                    <article class="tile is-child box test" id="result1">
                         <p class="title recipe-name" id="tile1"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img1">
@@ -153,8 +153,8 @@
 
             <div class="tile is-ancestor">
 
-                <div class="tile is-parent m-6 is-hidden recipe-tile">
-                    <article class="tile is-child box">
+                <div class="tile is-parent m-6 is-hidden recipe-tile recipebtn">
+                    <article class="tile is-child box test" id="result2">
                         <p class="title recipe-name" id="tile2"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img2">
@@ -162,8 +162,8 @@
                     </article>
                 </div>
 
-                <div class="tile is-parent m-6 is-hidden recipe-tile">
-                    <article class="tile is-child box">
+                <div class="tile is-parent m-6 is-hidden recipe-tile recipebtn">
+                    <article class="tile is-child box test" id="result3">
                         <p class="title recipe-name" id="tile3"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img3">
@@ -177,8 +177,8 @@
 
             <div class="tile is-ancestor">
 
-                <div class="tile is-parent m-6 is-hidden recipe-tile">
-                    <article class="tile is-child box">
+                <div class="tile is-parent m-6 is-hidden recipe-tile recipebtn">
+                    <article class="tile is-child box test" id="result4">
                         <p class="title recipe-name" id="tile4"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img4">
@@ -186,8 +186,8 @@
                     </article>
                 </div>
 
-                <div class="tile is-parent m-6 is-hidden recipe-tile">
-                    <article class="tile is-child box">
+                <div class="tile is-parent m-6 is-hidden recipe-tile recipebtn">
+                    <article class="tile is-child box test" id="result5">
                         <p class="title recipe-name" id="tile5"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img5">
@@ -218,32 +218,9 @@
                             <div class="content">
                                 <span>Recipe Instructions:</span>
 
-                                <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus.
-                                    Proin eget tortor risus. Vivamus suscipit tortor eget felis porttitor volutpat.
-                                    Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Nulla porttitor
-                                    accumsan tincidunt.
-                                    Nulla quis lorem ut libero malesuada feugiat. Cras ultricies ligula sed magna dictum
-                                    porta. Curabitur arcu erat,
-                                    accumsan id imperdiet et, porttitor at sem. Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit.
-                                    Nulla quis lorem ut libero malesuada feugiat.
-                                </p>
-
-                                <p>
-                                    Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ac diam sit
-                                    amet
-                                    quam vehicula elementum sed sit amet dui. Pellentesque in ipsum id orci porta
-                                    dapibus.
-                                    Lorem ipsum dolor sit amet,
-                                    consectetur adipiscing elit. Donec sollicitudin molestie malesuada. Vestibulum ante
-                                    ipsum primis in faucibus orci
-                                    luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam
-                                    vel, ullamcorper sit amet ligula.
-                                    Donec rutrum congue leo eget malesuada. Curabitur aliquet quam id dui posuere
-                                    blandit.
-                                    Mauris blandit aliquet elit,
-                                    eget tincidunt nibh pulvinar a. Nulla porttitor accumsan tincidunt.
-                                </p>
+                                <p class="recipe_step">
+                                </p> 
+                                                                                                  
                             </div>
                         </div>
 
