Added code for recipe name and instructions to appear on the modal.

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
                         <div class="field">
                             <div class="control">
                                 <input class="input is-primary is-norma is-rounded" id="ingredient_1" type="search"
-                                    placeholder="Enter an ingredient here" style="font-style:italic">
+                                    placeholder="Enter ingredient here" style="font-style:italic">
                             </div>
                         </div>
                         <div class="field">
                             <div class="control">
                                 <input class="input is-primary is-normal is-rounded" id="ingredient_2" type="search"
-                                    placeholder="Enter an ingredient here" style="font-style:italic">
+                                    placeholder="Enter ingredient here" style="font-style:italic">
                             </div>
                         </div>
                         <div class="field">
                             <div class="control">
                                 <input class="input is-primary is-normal is-rounded" id="ingredient_3" type="search"
-                                    placeholder="Enter an ingredient here" style="font-style:italic">
+                                    placeholder="Enter ingredient here" style="font-style:italic">
                             </div>
                         </div>
 
@@ -130,7 +130,7 @@
             <div class="tile buttons is-ancestor mt-2">
 
                 <div class="tile is-parent m-6 is-hidden recipe-tile recipebtn">
-                    <article class="tile is-child box test" id="result0">
+                    <article class="tile is-child box recipe" id="result0">
                         <p class="title recipe-name" id="tile0"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img0">
@@ -139,7 +139,7 @@
                 </div>
 
                 <div class="tile is-parent m-6 is-hidden recipe-tile recipebtn">
-                    <article class="tile is-child box test" id="result1">
+                    <article class="tile is-child box recipe" id="result1">
                         <p class="title recipe-name" id="tile1"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img1">
@@ -154,7 +154,7 @@
             <div class="tile is-ancestor">
 
                 <div class="tile is-parent m-6 is-hidden recipe-tile recipebtn">
-                    <article class="tile is-child box test" id="result2">
+                    <article class="tile is-child box recipe" id="result2">
                         <p class="title recipe-name" id="tile2"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img2">
@@ -163,7 +163,7 @@
                 </div>
 
                 <div class="tile is-parent m-6 is-hidden recipe-tile recipebtn">
-                    <article class="tile is-child box test" id="result3">
+                    <article class="tile is-child box recipe" id="result3">
                         <p class="title recipe-name" id="tile3"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img3">
@@ -178,7 +178,7 @@
             <div class="tile is-ancestor">
 
                 <div class="tile is-parent m-6 is-hidden recipe-tile recipebtn">
-                    <article class="tile is-child box test" id="result4">
+                    <article class="tile is-child box recipe" id="result4">
                         <p class="title recipe-name" id="tile4"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img4">
@@ -187,7 +187,7 @@
                 </div>
 
                 <div class="tile is-parent m-6 is-hidden recipe-tile recipebtn">
-                    <article class="tile is-child box test" id="result5">
+                    <article class="tile is-child box recipe" id="result5">
                         <p class="title recipe-name" id="tile5"></p>
                         <figure class="image is-4by3 recipe-image">
                             <img src="https://bulma.io/images/placeholders/640x480.png" id="img5">
@@ -218,9 +218,9 @@
                             <div class="content">
                                 <span>Recipe Instructions:</span>
 
-                                <p class="recipe_step">
-                                </p> 
-                                                                                                  
+                                <p class="recipe-step">
+                                </p>
+
                             </div>
                         </div>
 
@@ -279,8 +279,8 @@
     <!-- script links -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule="" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"></script>    <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/js/script.js"></script>
 
