Added ingredients list to show on modal.

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
 
             <!-- Start of modal -->
-            <div class="modal is-active is-active">
+            <div class="modal is-active is-hidden">
                 <div class="modal-background"></div>
                 <div class="modal-card">
                     <header class="modal-card-head">
@@ -216,10 +216,10 @@
                             </p>
 
                             <div class="content">
-                                <span>Recipe Instructions:</span>
-
-                                <p class="recipe-step">
-                                </p>
+                                <span>RECIPE INSTRUCTIONS:</span>
+                                <div>-- Ingredients --</div>
+                                <ul class="recipe-ingredients"></ul>
+                                <p class="recipe-step"></p>
 
                             </div>
                         </div>
